--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,5 @@ extends layout.pug
 block content
     section#contentfooter
         h2 Welcome, #{name}!
+        form(action='/', method='post')
+            button(type='submit') Goodbye!
