Added logic to check the url and create a url for the link to flipthe card. Added the elements in the card.pug file to display the appropriate link.

--- a/views/card.pug
+++ b/views/card.pug
@@ -17,11 +17,17 @@ block content
                             td= name.last
                         else
                             td= "N/A"
-    h2= prompt
+    h2= text
     if hint
         p
             i Hint: #{hint}
+        p
+            a(href=`${flipUrl}`)
+                i Answer
     else
-        p (There is no hint available)
+        p
+            a(href=`${flipUrl}`)
+                i Question
+
 
     
