Added additional logic to the pug file to display specific information for each side of the card. Also, refactored the logic of cards.js to handle missing query strings and query strings not related to question or answer.

--- a/views/card.pug
+++ b/views/card.pug
@@ -24,10 +24,16 @@ block content
         p
             a(href=`${flipUrl}`)
                 i Answer
+                br
+                a(href='/cards') Next Card
     else
+        p
+            i Q: #{question}
         p
             a(href=`${flipUrl}`)
                 i Question
+                br
+                a(href='/cards') Next Card
 
 
     
